Fixed nav to top of screen, Added app component overflow handling

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,6 +5,9 @@
   display: flex;
   flex-direction: column;
 
+  overflow-x: hidden;
+  overflow-y: auto;
+
   background-color: var(--theme-background);
   color: var(--theme-text-0);
   
